@@ -1,3 +1,7 @@
+2016-07-06  Werner Lemberg  <wl@gnu.org>
+
+	* src/truetype/ttinterp.c (TInstruction_Function): Removed, unused.
+
 2016-07-05  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.6.4 released.
